# cli-crud-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Tasks.txt  main
.github/workflows/: ci.yml
src/: add.rs  complete.rs  delete.rs  list.rs  main.rs  matching.rs
